added: final homework

--- a/Homeworks/myprogect/homework3app/templates/homework3app/base.html
+++ b/Homeworks/myprogect/homework3app/templates/homework3app/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <p><h1  style="text-align:center;">Домашняя работа №3</h1></p>
+        <p><h1  style="text-align:center;">Финальная домашняя работа</h1></p>
     </header>
     {% block content %}
         <div style="text-align:center;">
